fix Link/button in MyGames on Firefox

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -145,6 +145,7 @@ a:active {
   flex-flow: row wrap;
 }
 .myGamesEntry {
+  color: #cccccc;
   background-color: #ffffff00;
 
   border: none;
